--- a/insightsnap-backend/env.example
+++ b/insightsnap-backend/env.example
@@ -1,7 +1,7 @@
 # Server Configuration
 PORT=3001
 NODE_ENV=development
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://insightsnap.co
 
 # API Keys
 X_BEARER_TOKEN=your_x_bearer_token_here
