Feature: Add email notifications for new user signups - Create emailService with beautiful HTML email templates - Add notification API endpoint in backend - Integrate notifications in signup flow (email & Google OAuth) - Add notificationService on frontend - Update env.example with SMTP configuration - Include nodemailer dependency - Add comprehensive setup guide (EMAIL_NOTIFICATIONS_SETUP.md) - Non-blocking notifications (signup succeeds even if email fails)

--- a/insightsnap-backend/env.example
+++ b/insightsnap-backend/env.example
@@ -7,6 +7,13 @@ FRONTEND_URL=https://insightsnap.co
 X_BEARER_TOKEN=your_x_bearer_token_here
 PERPLEXITY_API_KEY=your_perplexity_api_key_here
 
+# Email Configuration (for signup notifications)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your_email@gmail.com
+SMTP_PASSWORD=your_app_password_here
+ADMIN_EMAIL=admin@insightsnap.co
+
 # Database (if needed in future)
 # DATABASE_URL=your_database_url_here
 
