--- a/insightsnap-backend/package.json
+++ b/insightsnap-backend/package.json
@@ -24,8 +24,7 @@
     "morgan": "^1.10.0",
     "winston": "^3.11.0",
     "node-cache": "^5.1.2",
-    "joi": "^17.11.0",
-    "nodemailer": "^6.9.7"
+    "joi": "^17.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
