feat: Add optional Reddit API authentication for 10x higher rate limits

--- a/insightsnap-backend/env.example
+++ b/insightsnap-backend/env.example
@@ -7,6 +7,10 @@ FRONTEND_URL=https://insightsnap.co
 X_BEARER_TOKEN=your_x_bearer_token_here
 PERPLEXITY_API_KEY=your_perplexity_api_key_here
 
+# Reddit API (Optional - improves rate limits from 60/min to 600/min)
+REDDIT_CLIENT_ID=your_reddit_client_id_here
+REDDIT_CLIENT_SECRET=your_reddit_client_secret_here
+
 # Database (if needed in future)
 # DATABASE_URL=your_database_url_here
 
