--- a/insightsnap-backend/env.example
+++ b/insightsnap-backend/env.example
@@ -6,6 +6,7 @@ FRONTEND_URL=https://insightsnap.co
 # API Keys
 X_BEARER_TOKEN=your_x_bearer_token_here
 PERPLEXITY_API_KEY=your_perplexity_api_key_here
+YOUTUBE_API_KEY=your_youtube_api_key_here
 
 # Reddit API (Optional - improves rate limits from 60/min to 600/min)
 REDDIT_CLIENT_ID=your_reddit_client_id_here
