--- a/insightsnap-backend/package.json
+++ b/insightsnap-backend/package.json
@@ -24,7 +24,8 @@
     "morgan": "^1.10.0",
     "winston": "^3.11.0",
     "node-cache": "^5.1.2",
-    "joi": "^17.11.0"
+    "joi": "^17.11.0",
+    "@supabase/supabase-js": "^2.38.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
