--- a/insightsnap-backend/env.example
+++ b/insightsnap-backend/env.example
@@ -1,26 +1,25 @@
+# InsightSnap Backend Environment Variables
+
 # Server Configuration
 PORT=3001
 NODE_ENV=development
-FRONTEND_URL=https://insightsnap.co
 
 # API Keys
-X_BEARER_TOKEN=your_x_bearer_token_here
 PERPLEXITY_API_KEY=your_perplexity_api_key_here
-YOUTUBE_API_KEY=your_youtube_api_key_here
-
-# Reddit API (Optional - improves rate limits from 60/min to 600/min)
 REDDIT_CLIENT_ID=your_reddit_client_id_here
 REDDIT_CLIENT_SECRET=your_reddit_client_secret_here
+X_BEARER_TOKEN=your_x_bearer_token_here
+YOUTUBE_API_KEY=your_youtube_api_key_here
 
-# Database (if needed in future)
-# DATABASE_URL=your_database_url_here
+# Supabase Configuration (Optional - for rating system)
+# If not configured, the rating system will be disabled but the app will still work
+SUPABASE_URL=your_supabase_project_url_here
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
+
+# CORS Configuration
+FRONTEND_URL=http://localhost:5173
+ALLOWED_ORIGINS=http://localhost:5173,https://yourdomain.com
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=300
-
-# Caching
-CACHE_TTL_SECONDS=300
-
-# Logging
-LOG_LEVEL=info
+RATE_LIMIT_MAX_REQUESTS=100
