--- a/netlify.toml
+++ b/netlify.toml
@@ -30,7 +30,7 @@
     X-Frame-Options = "DENY"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
-    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' https://connect.facebook.net https://www.googletagmanager.com https://www.google-analytics.com; connect-src 'self' https://*.supabase.co https://*.supabase.io https://connect.facebook.net https://www.googletagmanager.com https://www.google-analytics.com https://analytics.google.com https://api.x.com https://api.perplexity.ai https://www.reddit.com https://backend-production-be5d.up.railway.app; img-src 'self' data: https:; style-src 'self' 'unsafe-inline' https:; font-src 'self' https:; frame-src 'none';"
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' https://connect.facebook.net https://www.googletagmanager.com https://www.google-analytics.com; connect-src 'self' https://*.supabase.co https://*.supabase.io wss://*.supabase.co wss://*.supabase.io https://connect.facebook.net https://www.googletagmanager.com https://www.google-analytics.com https://analytics.google.com https://api.x.com https://api.perplexity.ai https://www.reddit.com https://backend-production-be5d.up.railway.app; img-src 'self' data: https:; style-src 'self' 'unsafe-inline' https:; font-src 'self' https:; frame-src 'none';"
 
 # Cache static assets
 [[headers]]
